2016-11-18  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.am (check-mini-gmp): Get CC and EXTRA_CFLAGS right.

2016-11-17  Torbjörn Granlund  <tg@gmplib.org>

	* asl.h: Initial support for artificially small limbs.

2016-11-01  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/generic/dive_1.c: Remove a forgotten dummy while-loop.  (Spotted
	by Peter Barfuss.)

2016-10-31   Oleg Oshmyan  <chortos@inbox.lv>

	* gmp-impl.h (x86_64 MPN_IORD_U): Use proper asm constraint.

2016-10-30  Torbjörn Granlund  <tg@gmplib.org>

	* mpn/Makefile.am (TARG_DIST): Add riscv.

2016-10-28  Marc Glisse  <marc.glisse@inria.fr>

	* gmpxx.h (__gmp_binary_divides): Let 1/q call mpq_inv.
	* tests/cxx/t-ops.cc (check_mpq): Test it.

2016-10-24  Torbjörn Granlund  <tg@gmplib.org>

	* config.guess: Recognise Itanium Poulson.

2016-10-15  Torbjörn Granlund  <tg@gmplib.org>

	* configure.ac (arm*-*-*): Amend last change.

2016-10-14  Torbjörn Granlund  <tg@gmplib.org>

	* longlong.h (riscv umul_ppmm): New.

	* mpn/riscv/64/aors_n.asm: New file.
	* mpn/riscv/64/mul_1.asm: New file.
	* mpn/riscv/64/aorsmul_1.asm: New file.

	* mpn/generic/addmul_1.c: Rewrite for shallower recurrency.
	* mpn/generic/submul_1.c: Likewise.

	* configure.ac (riscv-*-*): New.
	(arm*-*-*): Rewrite arm support to handle armv8 CPUs in 32-bit mode.

2016-08-29  Torbjörn Granlund  <tg@gmplib.org>

	* All C files: Include just gmp-impl.h, make gmp-impl.h grab gmp.h.

	* mpf/get_str.c: Use __GMP_ALLOCATE_FUNC_TYPE and friends.
	* mpf/inp_str.c: Likewise.
	* mpq/get_str.c: Likewise.
	* mpz/get_str.c: Likewise.
	* mpz/inp_str.c: Likewise.
	* scanf/vsscanf.c: Likewise.
	* tal-reent.c: Likewise.

2016-08-24  Vlad Zakharov <vzakhar@synopsys.com>

	* longlong.h (arc add_ssaaaa, sub_ddmmss): Replace obsolete 'J'
	constraint with 'Cal'.

2016-08-22  Marc Glisse  <marc.glisse@inria.fr>

	* longlong.h (umul_ppmm from __umulsidi3): Protect with do ...
	while (0).

2016-06-02  Torbjörn Granlund  <tg@gmplib.org>